--- a/HTMLParserSln/HTMLParser.Console/HTMLParser.Console.csproj
+++ b/HTMLParserSln/HTMLParser.Console/HTMLParser.Console.csproj
@@ -6,5 +6,14 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
-
+	<ItemGroup>
+		<PackageReference Include="HtmlAgilityPack" Version="1.12.0" />
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
+	</ItemGroup>
+	<ItemGroup>
+	  <ProjectReference Include="..\HTMLParser.AI\HTMLParser.AI.csproj" />
+	  <ProjectReference Include="..\HTMLParser.Library\HTMLParser.Library.csproj" />
+	  <ProjectReference Include="..\HTMLParser.Models\HTMLParser.Models.csproj" />
+	</ItemGroup>
 </Project>
