--- a/HTMLParserSln/HTMLParser.Library/HTMLParser.Library.csproj
+++ b/HTMLParserSln/HTMLParser.Library/HTMLParser.Library.csproj
@@ -12,6 +12,7 @@
 		<PackageReference Include="Microsoft.Extensions.Configuration.json" Version="8.0.0" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
+		<PackageReference Include="ReverseMarkdown" Version="4.6.0" />
 	</ItemGroup>
 
 	<ItemGroup>
